# ModernCppChallenge

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/chapters/: CMakeLists.txt
src/chapters/chapter_1/: CMakeLists.txt  c1_p1.cpp  c1_p2.cpp  c1_p3.cpp  c1_p4.cpp  c1_p5.cpp  c1_p6.cpp
src/libraries/: CMakeLists.txt  README.md
src/libraries/include/: gen_math.h  prime.h
src/libraries/src/: gen_math.cpp
src/modules/: README.md
