add_executable(c1_p1 c1_p1.cpp)
target_link_libraries(c1_p1 PUBLIC project_common_libraries )

add_executable(c1_p2 c1_p2.cpp)
target_link_libraries(c1_p2 PUBLIC project_common_libraries )

add_executable(c1_p3 c1_p3.cpp)
target_link_libraries(c1_p3 PUBLIC project_common_libraries )

add_executable(c1_p4 c1_p4.cpp)
target_link_libraries(c1_p4 PUBLIC project_common_libraries )

add_executable(c1_p5 c1_p5.cpp)
target_link_libraries(c1_p5 PUBLIC project_common_libraries )

add_executable(c1_p6 c1_p6.cpp)
target_link_libraries(c1_p6 PUBLIC project_common_libraries )